@@ -18,6 +18,10 @@
 
 #include "mlvalues.h"
 
+#ifdef __cplusplus
+extern "C" {
+#endif
+
 CAMLextern uint32 caml_hash_mix_uint32(uint32 h, uint32 d);
 CAMLextern uint32 caml_hash_mix_intnat(uint32 h, intnat d);
 CAMLextern uint32 caml_hash_mix_int64(uint32 h, int64 d);
@@ -25,5 +29,8 @@ CAMLextern uint32 caml_hash_mix_double(uint32 h, double d);
 CAMLextern uint32 caml_hash_mix_float(uint32 h, float d);
 CAMLextern uint32 caml_hash_mix_string(uint32 h, value s);
 
-
+#ifdef __cplusplus
+}
 #endif
+
+#endif /* CAML_HASH_H */
